[gd_scene load_steps=24 format=2]

[ext_resource path="res://fonts/SourceHanSansSC-Normal.otf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/SourceHanSansSC-Bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://lobby.gd" type="Script" id=3]
[ext_resource path="res://fonts/SourceHanSansSC-Regular.otf" type="DynamicFontData" id=4]
[ext_resource path="res://background.png" type="Texture" id=5]
[ext_resource path="res://game.gd" type="Script" id=6]
[ext_resource path="res://fonts/font_normal.tres" type="DynamicFont" id=7]
[ext_resource path="res://card.tscn" type="PackedScene" id=8]
[ext_resource path="res://cards/head.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=12]

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=14]
size = 14
font_data = ExtResource( 1 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = -1023.0
margin_bottom = -600.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Players" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 327.0
margin_top = 64.0
margin_right = 700.0
margin_bottom = 517.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Players"]
margin_left = 57.0857
margin_top = 14.5
margin_right = 289.086
margin_bottom = 54.5
custom_fonts/font = SubResource( 1 )
text = "等待玩家加入..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Players"]
margin_left = 121.086
margin_top = 382.5
margin_right = 249.086
margin_bottom = 430.5
custom_fonts/font = SubResource( 2 )
text = "开斗！"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="ItemList" parent="Players"]
margin_left = 57.0
margin_top = 63.0
margin_right = 313.0
margin_bottom = 375.0
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 271.0
margin_top = 104.0
margin_right = 730.0
margin_bottom = 426.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Connect"]
margin_left = 36.0857
margin_top = 9.5
margin_right = 120.086
margin_bottom = 51.5
custom_fonts/font = SubResource( 4 )
text = "名字:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="LineEdit" parent="Connect"]
margin_left = 36.0
margin_top = 66.0
margin_right = 308.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 5 )
text = "你的名字"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="Connect"]
margin_left = 356.086
margin_top = 73.5
margin_right = 420.086
margin_bottom = 105.5
custom_fonts/font = SubResource( 6 )
text = "开服"

[node name="IPLabel" type="Label" parent="Connect"]
margin_left = 36.0857
margin_top = 129.5
margin_right = 120.086
margin_bottom = 171.5
custom_fonts/font = SubResource( 4 )
text = "IP:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPAddress" type="LineEdit" parent="Connect"]
margin_left = 35.5857
margin_top = 193.0
margin_right = 307.586
margin_bottom = 233.0
custom_fonts/font = SubResource( 5 )
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="Connect"]
margin_left = 356.086
margin_top = 201.5
margin_right = 420.086
margin_bottom = 233.5
custom_fonts/font = SubResource( 6 )
text = "加入"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorLabel" type="Label" parent="Connect"]
margin_left = 36.0
margin_top = 249.0
margin_right = 420.0
margin_bottom = 297.0
custom_fonts/font = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 48.0
margin_bottom = 58.0
window_title = "提示！"

[node name="Game" type="Node2D" parent="."]
visible = false
script = ExtResource( 6 )
Card = ExtResource( 8 )

[node name="Background" type="Sprite" parent="Game"]
position = Vector2( 0, 2.15082 )
texture = ExtResource( 5 )
offset = Vector2( 512, 300 )

[node name="LeftName" type="Label" parent="Game"]
margin_left = 142.586
margin_top = 56.0
margin_right = 262.586
margin_bottom = 112.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "阿三大苏打大撒爱担"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightName" type="Label" parent="Game"]
margin_left = 758.586
margin_top = 56.0
margin_right = 878.586
margin_bottom = 112.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "阿三大苏打大撒爱担"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OwnName" type="Label" parent="Game"]
margin_left = 142.586
margin_top = 304.0
margin_right = 262.586
margin_bottom = 360.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "阿三大苏打大撒爱担"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelfHead" type="Sprite" parent="Game"]
position = Vector2( 96.0943, 343.995 )
texture = ExtResource( 9 )

[node name="RightHead" type="Sprite" parent="Game"]
position = Vector2( 928.194, 88.307 )
texture = ExtResource( 9 )

[node name="LeftHead" type="Sprite" parent="Game"]
position = Vector2( 96.0943, 87.4161 )
texture = ExtResource( 9 )

[node name="LeftCardNum" type="Label" parent="Game"]
margin_left = 75.5952
margin_top = 141.111
margin_right = 115.595
margin_bottom = 171.111
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "17"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightCardNum" type="Label" parent="Game"]
margin_left = 905.883
margin_top = 141.111
margin_right = 945.883
margin_bottom = 171.111
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "17"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cards" type="Node2D" parent="Game"]

[node name="DZCards" type="Node2D" parent="Game"]

[node name="Button1" type="Button" parent="Game"]
margin_left = 504.895
margin_top = 359.356
margin_right = 589.895
margin_bottom = 395.356
custom_fonts/font = SubResource( 9 )
text = "Butten1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Game"]
margin_left = 656.086
margin_top = 359.356
margin_right = 741.086
margin_bottom = 395.356
custom_fonts/font = SubResource( 9 )
text = "Butten2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayCards" type="Node2D" parent="Game"]

[node name="CommentLabel" type="RichTextLabel" parent="Game"]
margin_left = 802.0
margin_top = 189.0
margin_right = 1013.0
margin_bottom = 371.0
focus_mode = 2
custom_styles/normal = SubResource( 12 )
custom_fonts/bold_font = SubResource( 10 )
custom_fonts/normal_font = SubResource( 11 )
custom_constants/line_separation = 1
bbcode_enabled = true
scroll_following = true
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="LineEdit" parent="Game"]
margin_left = 802.0
margin_top = 377.0
margin_right = 964.0
margin_bottom = 409.0
custom_fonts/font = SubResource( 13 )
clear_button_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SendButton" type="Button" parent="Game"]
margin_left = 966.0
margin_top = 377.0
margin_right = 1009.0
margin_bottom = 410.0
custom_fonts/font = SubResource( 14 )
text = "发送"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Players/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Connect/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Connect/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="Game/Button1" to="Game" method="_on_Button1_pressed"]
[connection signal="pressed" from="Game/Button2" to="Game" method="_on_Button2_pressed"]
[connection signal="pressed" from="Game/SendButton" to="Game" method="_on_SendButton_pressed"]
